src/main/java/com/example/hyebozabackend/global/error/custom/ErrorCode.java
package com.example.hyebozabackend.global.error.custom;

public class ErrorCode {
}
